2003-11-18  Dan Winship  <danw@ximian.com>

	* configure.in: Replace old gtk-doc test with GTK_DOC_CHECK()
	(AC_OUTPUT): add docs/Makefile, docs/reference/Makefile

	* autogen.sh (REQUIRED_AUTOMAKE_VERSION): 1.6, for gtk-doc.make

	* Makefile.am: updates for gtk-doc
	(SUBDIRS): add back "docs"

	* docs/Makefile.am (EXTRA_DIST): remove, since those old docs
	aren't around any more

	* docs/reference/*: set up gtk-doc

	* libsoup/Makefile.am (INCLUDES): Change G_LOG_DOMAIN to
	"libsoup". Remove unused defines.

	* libsoup/soup-connection.c: Fix doc comments
	* libsoup/soup-message.c: Likewise
	* libsoup/soup-misc.c: Likewise
	* libsoup/soup-socket.c: Likewise
	* libsoup/soup-uri.c: Likewise

	* libsoup/soup-address.h: Fixes to please gtk-doc
	* libsoup/soup-connection.h: Likewise
	* libsoup/soup-message.h: Likewise
	* libsoup/soup-message-private.h: Likewise
	* libsoup/soup-misc.h: Likewise
	* libsoup/soup-server-auth.h: Likewise
	* libsoup/soup-socket.h: Likewise
	* libsoup/soup-status.h: Likewise

2003-11-18  Dan Winship  <danw@ximian.com>

	* configure.in: Fix up the SSL checks some. Remove some useless
	old header checks.

	* libsoup/soup-misc.h: declare soup_ssl_supported.

	* libsoup/soup-gnutls.c: add soup_ssl_supported declaration.

	* libsoup/soup-nossl.c: Not an SSL implementation, built if
	HAVE_SSL is not defined.

	* libsoup/Makefile.am (libsoup_2_2_la_SOURCES): add soup-nossl.c

	* libsoup/soup-socket.c (soup_socket_start_ssl): Return success or
	failure.
	(listen_watch): Deal with soup_socket_start_ssl failing.

	* libsoup/soup-connection.c (tunnel_connect_finished,
	socket_connect_result, soup_connection_connect_sync): Deal with
	the soup_socket_start_ssl failing.

	* libsoup/soup-server.c (soup_server_new): Deal with
	soup_ssl_get_server_credentials failing

2003-11-18  Rodrigo Moya <rodrigo@ximian.com>

	* libsoup/soup-soap-message.[ch] (soup_soap_message_start_fault,
	soup_soap_message_end_fault, soup_soap_message_start_fault_detail,