@@ -1,3 +1,7 @@
+2003-11-18  Rodney Dawes  <dobey@ximian.com>
+
+	* acinclude.m4: Add GTK_DOC_CHECK
+
 2003-11-18  Dan Winship  <danw@ximian.com>
 
 	* configure.in: Replace old gtk-doc test with GTK_DOC_CHECK()
